# Issue2Idea

./: README.md  __init__.py  cli.py  demand_extractor.py  github_client.py  issue_parser.py  llm.py  prompt.py  pyproject.toml  reporter.py  requirements.txt
examples/: requirements.md
